# safeingest

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: how-it-works.md  improvement-ideas.md
skills/safeingest/: SKILL.md
src/safeingest/: __init__.py  cli.py  convert.py  patterns.py  pipeline.py  redact.py
tests/: evaluation.py  test_ai4privacy_regression.py  test_convert.py  test_eval_corpus.py  test_patterns.py  test_patterns_adversarial.py  test_patterns_property.py  test_pipeline.py  test_redact.py  test_selfcheck.py
tests/fixtures/: sample.html  sample.md
tests/fixtures/ai4privacy_fr_nl/: NOTICE.md  subset.jsonl
tests/fixtures/eval_corpus/: cv_fr.json  cv_fr.md  email_thread_fr.json  email_thread_fr.md  invoice_nl.json  invoice_nl.md  medical_referral_nl.json  medical_referral_nl.md
